# centrale

./: .env.sample  .gitignore  Cargo.toml  README.MD  just_restart.sh  rebuild_centrale.sh
admin/: Cargo.toml
admin/frontend/: .gitignore
admin/frontend/src/: Wrapper.vue
admin/frontend/src/components/: Index.vue
admin/src/: db.rs  main.rs  routes.rs
app/: Cargo.toml  README.MD
app/src/: main.rs  proxy.rs  server.rs
app/src/db/: db_error.rs
app/src/proxy/: get_user_id.rs  host.rs
app/src/user/: get.rs  hash.rs  post.rs  register.rs
centrale/: Cargo.toml  README.MD
centrale/src/: api.rs  (+9 more)
centrale_admin/: Cargo.toml
common/: Cargo.toml
config/: Cargo.toml
destination_server/: Cargo.toml
dir_and_db_pool/: Cargo.toml
dirsqlite_r2d2/: Cargo.toml
load_balancer/: Cargo.toml
load_balancer/src/: connect_to_writer.rs  error.rs  load_balancer.rs  main.rs  read_full_body.rs  request.rs  response.rs  start.rs
load_balancer/src/load_balancer/: request.rs  response.rs
load_balancer/src/load_balancer/request/: helpers.rs
proxy/: Cargo.toml  README.MD  test.localhost.com-key.pem  test.localhost.com.pem
proxy/src/: db.rs  error.rs  main.rs  proxy.rs  request.rs  routes.rs  server.rs  subdomain.rs  user.rs
proxy/src/db/: air_token.rs  bearer.rs  cookie.rs  get_db.rs  init.rs  subdomain.rs  subdomain_user.rs  user.rs
proxy/src/proxy/: api_test.rs  auth.rs  authenticate_and_authorize.rs  create_client.rs  create_test_app.rs  get_master_bearer.rs  get_user_id.rs  handle_test.rs  host.rs  one_request.rs  one_request_with_payload.rs  proxy_ws.rs  subdomain.rs  subdomain_string.rs  websocket.rs  wildcard.rs  wildcard_with_payload.rs  ws_authenticate_and_authorize.rs
proxy/src/proxy/auth/: authenticate_and_authorize.rs  get_user_id.rs  host.rs  subdomain.rs  subdomain_string.rs  ws_authenticate_and_authorize.rs
proxy/src/proxy/test/: api_test.rs  create_test_app.rs  handle_test.rs
proxy/src/proxy/websocket/: proxy_ws.rs  test.rs
proxy/src/proxy/wildcard/: is_front.rs  one_request.rs  one_request_with_payload.rs  serve_front.rs  test.rs
proxy/src/server/: auth.rs  auth_2.rs  log.rs  public_rate_limiter.rs  rate_limiter.rs  routes.rs  start.rs
proxy/src/server/log/: _payload.rs  connect_to_port.rs  convert.rs  payload.rs
proxy/src/subdomain/: get.rs  get_subdomain_user.rs  handle_post.rs  post.rs  respond_post.rs
proxy/src/user/: air_token.rs  cookie.rs  find_by_token.rs  get.rs  login.rs  post.rs  register.rs
proxy/src/user/air_token/: find_user_by_air_token.rs  generate_responder.rs  process.rs  random.rs  save.rs
proxy/src/user/bearer_token/: find_by_token.rs  process.rs  responder.rs  save.rs
proxy/src/user/bearer_token_view/: find_bearer_tokens.rs  process.rs  responder.rs
proxy/src/user/cookie/: create.rs  find_by_cookie.rs  save_cookie.rs
proxy/src/user/get/: get.rs  process.rs  test.rs
proxy/src/user/login/: find_user_by_hash.rs  find_user_salt.rs  handle.rs  hash_with_salt.rs  process.rs
proxy/src/user/post/: add_to_db.rs  cookie.rs  hash_and_salt.rs  post.rs  process.rs  register.rs  test.rs
proxy/ssl/: _wildcard.myapp.local-key.pem  _wildcard.myapp.local.pem  _wildcard.proompt.local-key.pem  _wildcard.proompt.local.pem
sample_server/: Cargo.toml
sample_server/src/: auth.rs  db.rs  enc_sample.rs  error.rs  main.rs  pool.rs  routes.rs  server.rs
sample_server/src/hello/: process.rs  respond.rs
sample_server/src/pool/: add.rs  get.rs
sample_server/src/register/: process.rs  respond.rs
src/: main.rs
test_suite/: Cargo.toml
test_suite/src/: error.rs  main.rs
writer/: Cargo.toml
writer/frontend/: .gitignore  index.html  package-lock.json  package.json  upload.sh
writer/frontend/src/: App.vue  index.js  routes.js
writer/frontend/src/components/: E404.vue  Index.vue  LastRequests.vue
writer/src/: _payload.rs  api.rs  connect_to_port.rs  convert.rs  db.rs  error.rs  handle_payload.rs  listen.rs  main.rs  one_connection.rs  one_message.rs  packet.rs  parse_checkin.rs  payload.rs  poll.rs  routes.rs  save_to_db.rs  server.rs  server_actix.rs  server_mio.rs  subdomain.rs
writer/src/api/: bytes.rs  feed.rs
(+110 files in other folders)
