[package]
name = "admin"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
mio = { version = "1.1.1", features = ["os-poll", "net"] }
thiserror = "2.0.12"
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
serde_json = "1.0.143"
serde_derive = "1.0.219"
serde = "1.0.219"
centrale = { path = "../centrale" }
common = { path = "../common" }
config = { path = "../config" }
dir_and_db_pool = { path = "../dir_and_db_pool" }
dotenvy = "0.15.7"
openssl = { version = "0.10", features = ["v102", "v110"] }
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3.33"
actix-files = "0.6.10"
chrono = "0.4.44"
