[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
env_logger = "0.11.9"
log = "0.4.29"
serde_json = "1.0.149"
dir_and_db_pool = { path = "../dir_and_db_pool" }
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
actix-rt = "2.11.0"
thiserror = "2.0.12"
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8"
actix-http = "3.12.0"
chrono = "0.4.44"
