[package]
name = "load_balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
common = { path = "../common" }
dotenvy = "0.15.7"
pingora = { version = "0.8.1", features = ["proxy", "openssl"] }
async-trait = "0.1.89"
log = "0.4.29"
env_logger = "0.11.9"
serde_json = "1.0.149"
uuid = { version = "1", features = ["v4"] }
