[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
env_logger = "0.11.9"
log = "0.4.29"
dir_and_db_pool = { path = "../dir_and_db_pool" }
config = { path = "../config" }
common = { path = "../common" }
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
actix-rt = "2.11.0"
thiserror = "2.0.12"
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.149"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8"
actix-http = "3.12.0"
chrono = "0.4.44"
actix-governor = "0.10.0"
futures-util = "0.3.32"
mio = { version = "1.1.1", features = ["os-poll", "net"] }
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
actix-ws = "0.4.0"
tokio-tungstenite = "0.29.0"
