[package]
name = "test_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
dir_and_db_pool = { path = "../dir_and_db_pool" }
proxy = { path = "../proxy" }
r2d2_sqlite = "0.31.0"
fake = { version = "5.1.0", features=["derive"] }
thiserror = "2.0.12"
chrono = "0.4.44"
config = { path = "../config" }
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
actix-web = "4.13.0"
