[package]
name = "writer"
version = "0.1.0"
edition = "2024"

[dependencies]
mio = { version = "1.1.1", features = ["os-poll", "net"] }
thiserror = "2.0.12"
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
serde_json = "1.0.143"
serde_derive = "1.0.219"
serde = "1.0.219"
proxy = { path = "../proxy" }
common = { path = "../common" }
config = { path = "../config" }
dir_and_db_pool = { path = "../dir_and_db_pool" }
